--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="form-container">
-    <img src="AIRFOXEX" alt="Sorteo" id="sorteo-img"> <!-- Reemplaza con la URL de tu imagen -->
+    <img src="AirFoxex" alt="Sorteo" id="sorteo-img"> <!-- Reemplaza con la URL de tu imagen -->
     <div class="form-content">
       <h1>Participa en nuestro sorteo</h1>
       <p>¡Por solo 1 euro puedes ganar un increíble premio!</p>
