--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div class="form-container">
-    <img src="AirFoxex.png" alt="Sorteo" id="img"> <!-- Reemplaza con la URL de tu imagen -->
+    <img src="AirFoxex" alt="Sorteo" id="img"> <!-- Reemplaza con la URL de tu imagen -->
     <div class="form-content">
       <h1>Participa en nuestro sorteo</h1>
       <p>¡Por solo 1 euro puedes ganar este premio!</p>    
