--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
       </form>
     </div>
   </div>
+  <footer style="text-align: center; padding: 10px; background-color: #f1f1f1; border-top: 1px solid #ccc; margin-top: 20px;">
+    <p>&copy; AirFoxex 2020</p>
+    <a href="/privacidad" style="color: #007BFF; text-decoration: none;">Derechos de privacidad</a>
+</footer>
 </body>
 </html>
