--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
 
     footer {
       text-align: center;
+      color: white;
       padding: 10px;
-      background-color: #f1f1f1;
-      border-top: 1px solid #ccc;
+      background-color: black;
+      border-top: 1px solid white;
       margin-top: auto;
+      border-bottom: 30%;
     }
 
     footer a {
