--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
       background-color: black;
       border-top: 1px solid white;
       margin-top: auto;
-      border-bottom: 30%;
     }
 
     footer a {
@@ -130,7 +129,7 @@
   </div>
   <footer>
     <p>&copy; AirFoxex 2020</p>
-    <a href="/privacidad">Derechos de privacidad</a>
+    <a href="derechos_de_privacidad.html">Derechos de privacidad</a>
   </footer>
 </body>
 </html>
