--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="form-content">
       <h1>Participa en nuestro sorteo</h1>
       <p>¡Por solo 1 euro puedes ganar el premio del anuncio!</p>    
-      <form action="https://formspree.io/f/mqaeenal" method="POST">
+      <form action="https://formspree.io/f/mwpvlvpo" method="POST">
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
         <input type="tel" name="telefono" placeholder="Número de Teléfono" required>
