derechos_de_privacidad.html

--- a/derechos_de_privacidad.html
+++ b/derechos_de_privacidad.html
@@ -67,6 +67,7 @@
             <li>No compartiremos tus datos personales con terceros sin tu consentimiento expreso, salvo en los casos requeridos por la ley.</li>
             <li>El participante tiene derecho a solicitar la eliminación de sus datos personales de nuestros registros en cualquier momento, salvo que sea necesario conservarlos por motivos legales o contractuales.</li>
             <li>Los datos se almacenarán en sistemas seguros y serán tratados conforme a las normativas de protección de datos vigentes.</li>
+            <li>Los datos facilitados están siendo transmitidos a través de la plataforma Formspree y Gmail. El sorteo no se hace responsable del uso que se le dé a esta información una vez haya sido procesada por estas plataformas.</li>
         </ul>
 
         <h2>Condiciones Generales</h2>
@@ -92,6 +93,6 @@
     <footer>
         <p>&copy; AirFoxex 2020</p>
         <a href="index.html">Regresar a AirFoxex   ......</a>
-      </footer>
+    </footer>
 </body>
 </html>
