--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <img src="AirFoxex" alt="Sorteo" id="img"> <!-- Reemplaza con la URL de tu imagen -->
     <div class="form-content">
       <h1>Participa en nuestro sorteo</h1>
-      <p>¡Por solo 1 euro puedes ganar el premio del anuncio!</p>    
+      <p>¡Por 1 pavo, puedes ganar el premio del anuncio !</p>    
       <form action="https://formspree.io/f/mwpvlvpo" method="POST">
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
