--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
         <input type="tel" name="telefono" placeholder="Número de Teléfono" required>       
-        <p>Cuando se realice la suscripción se mandará un enlace para el pago del sorteo.</p>
+        <p>Cuando se realice la suscripción se mandará un enlace para la participacion del sorteo.</p>
         <label>
           <input type="checkbox" name="terminos" required>
           Acepto los términos y condiciones
