--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     }
 
     form input[type="text"],
-    form input[type="email"],
-    form input[type="tel"] {
+    form input[type="email"] {
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
@@ -116,8 +115,8 @@
       <form action="https://formspree.io/f/mwpvlvpo" method="POST">
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
-        <input type="tel" name="telefono" placeholder="Número de Teléfono" required>       
-        <p>Cuando se realice la suscripción se mandará un enlace para la participacion del sorteo.</p>
+        <input type="email" name="correo" placeholder="Correo Electrónico" required>       
+        <p>Cuando se realice la suscripción se mandará un enlace para la participación del sorteo.</p>
         <label>
           <input type="checkbox" name="terminos" required>
           Acepto los términos y condiciones
