--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
       <form action="https://formspree.io/f/mwpvlvpo" method="POST">
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
-        <input type="email" name="correo" placeholder="Correo Electrónico" required>       
+        <input type="tel" name="telefono" placeholder="Número de Teléfono" required>
+        <input type="email" name="correo" placeholder="Correo Electrónico" required>         
         <p>Cuando se realice la suscripción se mandará un enlace para la participación del sorteo.</p>
         <label>
           <input type="checkbox" name="terminos" required>
