--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     }
 
     form input[type="text"],
-    form input[type="email"] {
+    form input[type="email"],
+    form input[type="tel"] {
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
@@ -111,12 +112,12 @@
     <img src="AirFoxex" alt="Sorteo" id="img"> <!-- Reemplaza con la URL de tu imagen -->
     <div class="form-content">
       <h1>Participa en nuestro sorteo</h1>
-      <p>¡Por 1 pavo, puedes ganar el premio del anuncio !</p>    
+      <p>¡Por 1 pavo, puedes ganar el premio del anuncio!</p>    
       <form action="https://formspree.io/f/mwpvlvpo" method="POST">
         <input type="text" name="nombre" placeholder="Nombre" required>
         <input type="text" name="apellido" placeholder="Apellido" required>
         <input type="tel" name="telefono" placeholder="Número de Teléfono" required>
-        <input type="email" name="correo" placeholder="Correo Electrónico" required>         
+        <input type="email" name="correo" placeholder="Correo Electrónico" required>       
         <p>Cuando se realice la suscripción se mandará un enlace para la participación del sorteo.</p>
         <label>
           <input type="checkbox" name="terminos" required>
