derechos_de_privacidad.html

--- a/derechos_de_privacidad.html
+++ b/derechos_de_privacidad.html
@@ -73,6 +73,7 @@
         <h2>Condiciones Generales</h2>
         <ul>
             <li>Participar en el sorteo implica la aceptación de estos términos y condiciones, así como la renuncia a cualquier reclamación que contradiga las disposiciones aquí establecidas.</li>
+             <li>El hecho de rellenar el formulario no implica automáticamente la inscripción como participante en el sorteo. Para formalizar la inscripción, será necesario completar las instrucciones que se proporcionarán en el correo electrónico de respuesta.</li>
             <li>No nos hacemos responsables por problemas técnicos, errores de red o cualquier otra dificultad que pueda impedir la participación en el sorteo.</li>
             <li>Nos reservamos el derecho de descalificar a cualquier participante que utilice medios fraudulentos o incumpla las normas establecidas.</li>
             <li>En caso de disputas, la decisión de la organización será final e inapelable.</li>
