--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       color: #007BFF;
       text-decoration: none;
     }
+
+    footer p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
@@ -129,7 +133,8 @@
   </div>
   <footer>
     <p>&copy; AirFoxex 2020</p>
-    <a href="derechos_de_privacidad.html">Derechos de privacidad</a>
+    <a href="derechos_de_privacidad.html">Derechos de privacidad</a><br>
+    <p>Para dudas, contacta: <a href="mailto:thesetifone@gmail.com">thesetifone@gmail.com</a></p>
   </footer>
 </body>
 </html>
