derechos_de_privacidad.html

--- a/derechos_de_privacidad.html
+++ b/derechos_de_privacidad.html
@@ -94,6 +94,7 @@
     <footer>
         <p>&copy; AirFoxex 2020</p>
         <a href="index.html">Regresar a AirFoxex   ......</a>
+        <p>Para dudas, contacta: <a href="mailto:thesetifone@gmail.com">thesetifone@gmail.com</a></p>
     </footer>
 </body>
 </html>
